# controle-impressoras

./: .env.example  .gitignore  ControleImpressoras.spec  app.db  app.db.bak  app.py  app.py.bak_20260514_161933  apply_theme.py  atualizar_banco.py  backup_antes_migrar_20260430_160519.db  config.py  corrigir_locais.py  db.py  main.py  migrate_V2.py  models.py  pyproject.toml  requirements.txt  ui.py
alembic/: env.py
alembic/versions/: ded4cb6c701a_add_estoque_minimo_to_part.py  initial_schema.py
app/: __init__.py
app/controllers/: __init__.py  auth_controller.py  printer_controller.py  report_controller.py
app/models/: __init__.py  activity.py  alert.py  attachment.py  audit_log.py  base.py  company.py  login_history.py  part.py  printer.py  technician.py  transfer.py  user.py
app/services/: __init__.py  activity_service.py  alert_service.py  audit_service.py  company_service.py  dashboard_service.py  login_history_service.py  part_service.py  printer_service.py  relatorio_service.py  report_service.py  technician_service.py  transfer_service.py  user_service.py
app/utils/: __init__.py  effects.py  helpers.py  logger.py  security.py
app/views/: __init__.py  login_dialog.py  main_window.py  (+4 more)
backups/: app_backup_20260430_120214.db  app_backup_20260430_141813.db  backup_20260513_165343.db
scripts/: apply_theme.py  corrigir_locais.py  migrate_V2.py
tests/: conftest.py  test_models.py  test_security.py  test_services.py
themes/: blue.qss  cyberpunk.qss  dark.qss  dark_premium.qss  dracula.qss  hacker.qss  light.qss  nord.qss  tokyo_night.qss
(+24 files in other folders)
