[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "controle-impressoras"
version = "2.0.0"
description = "Sistema de Controle de Impressoras Profissional"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Otavio Oliveira"},
]

dependencies = [
    "PySide6>=6.8",
    "SQLAlchemy>=2.0",
    "passlib[bcrypt]>=1.7",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[project.scripts]
controle-impressoras = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
